Nuevo crud con lineamientos en la db
