# models/item_informe_tipo_contrato.go
@@ -5,14 +5,18 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
 
 type ItemInformeTipoContrato struct {
-	Id           int          `orm:"column(id);pk;auto"`
-	ItemInforme  *ItemInforme `orm:"column(item_informe);rel(fk)"`
-	TipoContrato int          `orm:"column(tipo_contrato)"`
+	Id                int       `orm:"column(id);pk;auto"`
+	ItemInformeId     int       `orm:"column(item_informe_id)"`
+	TipoContratoId    int       `orm:"column(tipo_contrato_id)"`
+	Activo            bool      `orm:"column(activo)"`
+	FechaCreacion     time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
 func (t *ItemInformeTipoContrato) TableName() string {
